# playground

./: .gitignore  pyproject.toml  requirements.txt
playground/api/: fastapi_serving.py  flask_web.py  requirements.txt
playground/deep_learning/: Dockerfile  docker-compose.yml
playground/deep_learning/notebooks/: Deep Neural Nets in Keras.ipynb  Shallow Net in Keras.ipynb  Untitled.ipynb  Visualizing Activation Functions.ipynb
