[tool.poetry]
name = "playground"
version = "0.2.0"
description = "Playground for learning and prototyping."
authors = ["Noah Horsley <nphorsley59@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "2.0.0"
pandas = "2.2.2"
flask = "^3.0.3"
fastapi = "^0.112.2"
uvicorn = "^0.30.6"
requests = "^2.32.3"
torch = "^2.5.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
black = "^24.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py312']